--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,41 @@
 {
-    "name": "forestry/orm",
-    "description": "Tiny ORM for simple CRUD operations.",
-    "keywords": [
-        "forestry",
-        "orm",
-        "database",
-        "pdo"
-    ],
-    "homepage": "https://github.com/ForestryCodes/orm",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Daniel Melzer",
-            "email": "daniel@melzer.ws",
-            "homepage": "http://daniel.melzer.ws",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php" : ">=5.4.0"
+  "name": "faslatam/orm",
+  "description": "Tiny ORM for simple CRUD operations.",
+  "keywords": [
+    "forestry",
+    "orm",
+    "database",
+    "pdo"
+  ],
+  "homepage": "https://github.com/fadrian06/orm",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Daniel Melzer",
+      "email": "daniel@melzer.ws",
+      "homepage": "http://daniel.melzer.ws",
+      "role": "Developer"
     },
-    "require-dev": {
-        "phpunit/phpunit" : "4.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Forestry\\Orm\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Forestry\\Orm\\Test\\": "tests"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
+    {
+      "name": "Franyer Sánchez",
+      "email": "franyeradriansanchez@gmail.com",
+      "homepage": "https://faslatam.000webhostapp.com"
     }
+  ],
+  "require-dev": {
+    "phpunit/phpunit": "^10.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Forestry\\Orm\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Forestry\\Orm\\Test\\": "tests"
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
+  }
 }
